<resources>
    <string name="app_name">CameraNotificationSystem</string>
    <string name="default_plate">Plate #</string>
    <string name="alertButton">List New Alerts</string>
    <string name="notificationPageTitle">Notifications</string>

    <string name="loginButton">Login</string>

    <string name="menuPageTitle">Menu</string>
    <string name="menuReport">Add Report</string>
    <string name="menuRemoveReport">Remove Report</string>
    <string name="menuAddCamera">Add Camera</string>
    <string name="menuAddOfficer">Add Officer</string>
</resources>